sanger/sites/hemocytes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hemocytes
  labels:
    app: hemocytes
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 5005
  selector:
    app: hemocytes
